--- a/user-list-app/src/components/UI/Card.module.css
+++ b/user-list-app/src/components/UI/Card.module.css
@@ -1,7 +1,7 @@
 .card {
   width: 90%;
-  max-width: 700px;
-  margin: 20px auto;
+  max-width: 768px;
+  margin: 2rem auto;
   background-color: white;
   color: black;
   border-radius: 12px;
